# mitama-mana

./: .gitmodules
.circleci/: config.yml
include/mana/core/: type_inject.hpp  value_inject.hpp
include/mana/data/: type_list.hpp  value_list.hpp
include/mitama/mana/algorithm/: chunk.hpp  fold.hpp  klisli.hpp  sliding.hpp  transform.hpp
include/mitama/mana/core/: metafunc.hpp
include/mitama/mana/core/view/: apply_map.hpp  flat_map.hpp  flatten.hpp  map.hpp  view.hpp  view_fwd.hpp
include/mitama/mana/data/: constant_variable.hpp  maybe.hpp  type_list.hpp  type_variable.hpp  value_list.hpp
include/mitama/mana/data/tag/: data_tag.hpp
include/mitama/mana/functional/: chunkify.hpp  fix.hpp  metafunc.hpp  overload.hpp  overload_linearly.hpp  slidify.hpp  stride.hpp
include/mitama/mana/meta/: concat.hpp  index_range.hpp  list.hpp  repack.hpp  tuple_flatten.hpp
include/mitama/mana/meta/math/: multiply.hpp
include/mitama/mana/type_traits/: has_type.hpp  has_value.hpp  is_tuple_like.hpp
include/mitama/mana/utility/: apply.hpp  at.hpp  iota.hpp  peel.hpp
tests/: CMakeLists.txt  test.sh
tests/algorithm-tests/: chunk.cpp  klisli.cpp  sliding.cpp  transform.cpp
tests/data-tests/: type_list.cpp
tests/functional-tests/: chunkify.cpp  fix.cpp  overload.cpp  overload_linearly.cpp  slidify.cpp
